--- a/AutoMall/Base.lproj/Main.storyboard
+++ b/AutoMall/Base.lproj/Main.storyboard
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="12121" systemVersion="16G29" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" colorMatched="YES" initialViewController="49e-Tb-3d3">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="12121" systemVersion="16E195" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" colorMatched="YES" initialViewController="49e-Tb-3d3">
     <device id="retina4_7" orientation="portrait">
         <adaptation id="fullscreen"/>
     </device>
@@ -14,7 +14,7 @@
             <objects>
                 <navigationController id="FLK-OX-Pv4" sceneMemberID="viewController">
                     <tabBarItem key="tabBarItem" title="Item" id="Y65-ML-qdh"/>
-                    <navigationBar key="navigationBar" contentMode="scaleToFill" misplaced="YES" id="FcZ-e5-6QA">
+                    <navigationBar key="navigationBar" contentMode="scaleToFill" id="FcZ-e5-6QA">
                         <rect key="frame" x="0.0" y="0.0" width="375" height="44"/>
                         <autoresizingMask key="autoresizingMask"/>
                     </navigationBar>
@@ -41,15 +41,15 @@
                             <collectionView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" showsHorizontalScrollIndicator="NO" showsVerticalScrollIndicator="NO" dataMode="prototypes" translatesAutoresizingMaskIntoConstraints="NO" id="NJo-XH-TUQ">
                                 <rect key="frame" x="10" y="0.0" width="355" height="667"/>
                                 <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
-                                <collectionViewFlowLayout key="collectionViewLayout" minimumLineSpacing="10" minimumInteritemSpacing="10" id="RbZ-Z9-Vti">
+                                <collectionViewFlowLayout key="collectionViewLayout" minimumLineSpacing="5" minimumInteritemSpacing="5" id="RbZ-Z9-Vti">
                                     <size key="itemSize" width="112" height="210"/>
                                     <size key="headerReferenceSize" width="0.0" height="0.0"/>
                                     <size key="footerReferenceSize" width="0.0" height="0.0"/>
-                                    <inset key="sectionInset" minX="0.0" minY="10" maxX="0.0" maxY="20"/>
+                                    <inset key="sectionInset" minX="0.0" minY="5" maxX="0.0" maxY="20"/>
                                 </collectionViewFlowLayout>
                                 <cells>
                                     <collectionViewCell opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" reuseIdentifier="upkeepHomeCollectionCell" id="7Ty-62-hd2" customClass="UpkeepHomeCollectionCell">
-                                        <rect key="frame" x="0.0" y="10" width="112" height="210"/>
+                                        <rect key="frame" x="0.0" y="5" width="112" height="210"/>
                                         <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                         <view key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center">
                                             <rect key="frame" x="0.0" y="0.0" width="112" height="210"/>
@@ -115,7 +115,7 @@
             <objects>
                 <navigationController id="dUV-mP-trR" sceneMemberID="viewController">
                     <tabBarItem key="tabBarItem" title="Item" id="Bms-Jy-HS6"/>
-                    <navigationBar key="navigationBar" contentMode="scaleToFill" misplaced="YES" id="yTk-Nz-Dwj">
+                    <navigationBar key="navigationBar" contentMode="scaleToFill" id="yTk-Nz-Dwj">
                         <rect key="frame" x="0.0" y="0.0" width="375" height="44"/>
                         <autoresizingMask key="autoresizingMask"/>
                     </navigationBar>
@@ -344,7 +344,7 @@
             <objects>
                 <navigationController id="leZ-Jl-Ahm" sceneMemberID="viewController">
                     <tabBarItem key="tabBarItem" title="Item" id="jKQ-7u-8hm"/>
-                    <navigationBar key="navigationBar" contentMode="scaleToFill" misplaced="YES" id="A6f-qy-k90">
+                    <navigationBar key="navigationBar" contentMode="scaleToFill" id="A6f-qy-k90">
                         <rect key="frame" x="0.0" y="0.0" width="375" height="44"/>
                         <autoresizingMask key="autoresizingMask"/>
                     </navigationBar>
@@ -361,7 +361,7 @@
             <objects>
                 <navigationController id="bn1-fA-xYY" sceneMemberID="viewController">
                     <tabBarItem key="tabBarItem" title="Item" id="xjg-Qk-JJ8"/>
-                    <navigationBar key="navigationBar" contentMode="scaleToFill" misplaced="YES" id="u1v-Hf-Tcm">
+                    <navigationBar key="navigationBar" contentMode="scaleToFill" id="u1v-Hf-Tcm">
                         <rect key="frame" x="0.0" y="0.0" width="375" height="44"/>
                         <autoresizingMask key="autoresizingMask"/>
                     </navigationBar>
