--- a/AutoMall/ViewControllers/PersonalCenter/CenterEmployeeCell.xib
+++ b/AutoMall/ViewControllers/PersonalCenter/CenterEmployeeCell.xib
@@ -18,49 +18,36 @@
                 <rect key="frame" x="0.0" y="0.0" width="425" height="122.5"/>
                 <autoresizingMask key="autoresizingMask"/>
                 <subviews>
-                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="认证名称" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="DMe-ep-4P7">
-                        <rect key="frame" x="96" y="8" width="65.5" height="21"/>
+                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="技能特长" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="DMe-ep-4P7">
+                        <rect key="frame" x="16" y="8" width="65.5" height="22"/>
                         <constraints>
-                            <constraint firstAttribute="height" constant="21" id="snA-RE-ERH"/>
+                            <constraint firstAttribute="height" constant="22" id="snA-RE-ERH"/>
                         </constraints>
                         <fontDescription key="fontDescription" type="system" pointSize="16"/>
                         <nil key="textColor"/>
                         <nil key="highlightedColor"/>
                     </label>
                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="认证介绍多行 认证介绍多行 认证介绍多行 认证介绍多行 认证介绍多行 认证介绍多行 认证介绍多行 认证介绍多行 " textAlignment="natural" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="y6P-hc-wOD">
-                        <rect key="frame" x="96" y="37" width="321" height="77.5"/>
+                        <rect key="frame" x="16" y="38" width="401" height="76.5"/>
                         <fontDescription key="fontDescription" type="system" pointSize="15"/>
                         <nil key="textColor"/>
                         <nil key="highlightedColor"/>
                     </label>
-                    <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="default" translatesAutoresizingMaskIntoConstraints="NO" id="J6L-bf-r7f">
-                        <rect key="frame" x="8" y="21" width="80" height="80"/>
-                        <constraints>
-                            <constraint firstAttribute="width" constant="80" id="hkx-q6-0ME"/>
-                            <constraint firstAttribute="height" constant="80" id="vIr-Yc-MX1"/>
-                        </constraints>
-                    </imageView>
                 </subviews>
                 <constraints>
-                    <constraint firstItem="y6P-hc-wOD" firstAttribute="leading" secondItem="J6L-bf-r7f" secondAttribute="trailing" constant="8" id="7RJ-mr-CJ8"/>
-                    <constraint firstItem="J6L-bf-r7f" firstAttribute="centerY" secondItem="H2p-sc-9uM" secondAttribute="centerY" id="Pe1-1e-koB"/>
-                    <constraint firstItem="J6L-bf-r7f" firstAttribute="leading" secondItem="H2p-sc-9uM" secondAttribute="leading" constant="8" id="lEf-gA-YjQ"/>
+                    <constraint firstItem="DMe-ep-4P7" firstAttribute="leading" secondItem="H2p-sc-9uM" secondAttribute="leading" constant="16" id="81j-cY-If4"/>
+                    <constraint firstItem="y6P-hc-wOD" firstAttribute="leading" secondItem="H2p-sc-9uM" secondAttribute="leading" constant="16" id="Dcx-M8-7Vi"/>
                     <constraint firstAttribute="bottom" secondItem="y6P-hc-wOD" secondAttribute="bottom" constant="8" id="le4-od-Nq6"/>
                     <constraint firstItem="y6P-hc-wOD" firstAttribute="top" secondItem="DMe-ep-4P7" secondAttribute="bottom" constant="8" id="meL-QC-A3b"/>
                     <constraint firstAttribute="trailing" secondItem="y6P-hc-wOD" secondAttribute="trailing" constant="8" id="myO-jY-Hh8"/>
-                    <constraint firstItem="DMe-ep-4P7" firstAttribute="leading" secondItem="J6L-bf-r7f" secondAttribute="trailing" constant="8" id="qZ5-71-vw2"/>
                     <constraint firstItem="DMe-ep-4P7" firstAttribute="top" secondItem="H2p-sc-9uM" secondAttribute="top" constant="8" id="qcT-PE-SMu"/>
                 </constraints>
             </tableViewCellContentView>
             <connections>
                 <outlet property="contentL" destination="y6P-hc-wOD" id="AT3-5b-BYh"/>
-                <outlet property="imgView" destination="J6L-bf-r7f" id="GPH-RP-jhF"/>
                 <outlet property="titleL" destination="DMe-ep-4P7" id="v1B-XQ-Lta"/>
             </connections>
-            <point key="canvasLocation" x="-143.5" y="-18.5"/>
+            <point key="canvasLocation" x="-230" y="-23"/>
         </tableViewCell>
     </objects>
-    <resources>
-        <image name="default" width="512" height="512"/>
-    </resources>
 </document>
