--- a/AutoMall/ViewControllers/PersonalCenter/HeadNameCell.xib
+++ b/AutoMall/ViewControllers/PersonalCenter/HeadNameCell.xib
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="12121" systemVersion="16E195" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" colorMatched="YES">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="12121" systemVersion="16G29" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" colorMatched="YES">
     <device id="retina4_7" orientation="portrait">
         <adaptation id="fullscreen"/>
     </device>
@@ -36,7 +36,7 @@
                         <nil key="highlightedColor"/>
                     </label>
                     <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="gbz-tC-hl3">
-                        <rect key="frame" x="76" y="8" width="66" height="30"/>
+                        <rect key="frame" x="84" y="8" width="66" height="30"/>
                         <constraints>
                             <constraint firstAttribute="height" constant="30" id="Yml-zn-mhY"/>
                         </constraints>
@@ -46,7 +46,7 @@
                         </state>
                     </button>
                     <button hidden="YES" opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="Caf-U9-tpv">
-                        <rect key="frame" x="76" y="41.5" width="62" height="30"/>
+                        <rect key="frame" x="84" y="41.5" width="62" height="30"/>
                         <constraints>
                             <constraint firstAttribute="height" constant="30" id="3Ny-a7-WsT"/>
                         </constraints>
@@ -56,14 +56,14 @@
                         </state>
                     </button>
                     <imageView hidden="YES" userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="bronzeBadge" translatesAutoresizingMaskIntoConstraints="NO" id="kXB-f4-Q3E">
-                        <rect key="frame" x="146" y="46" width="20" height="20"/>
+                        <rect key="frame" x="154" y="46" width="20" height="20"/>
                         <constraints>
                             <constraint firstAttribute="height" constant="20" id="XPD-Al-I7P"/>
                             <constraint firstAttribute="width" constant="20" id="k6T-9k-OCz"/>
                         </constraints>
                     </imageView>
                     <button hidden="YES" opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="cpc-Qw-hH1">
-                        <rect key="frame" x="76" y="41" width="92" height="30"/>
+                        <rect key="frame" x="84" y="41" width="92" height="30"/>
                         <constraints>
                             <constraint firstAttribute="height" constant="30" id="pPb-tU-EPQ"/>
                         </constraints>
@@ -73,36 +73,47 @@
                         </state>
                     </button>
                     <imageView hidden="YES" userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="arrows" translatesAutoresizingMaskIntoConstraints="NO" id="nuc-l9-QZX">
-                        <rect key="frame" x="150" y="14" width="10" height="18"/>
+                        <rect key="frame" x="158" y="14" width="10" height="18"/>
                         <constraints>
                             <constraint firstAttribute="height" constant="18" id="MoP-B9-8Rc"/>
                             <constraint firstAttribute="width" constant="10" id="lf9-ix-zTr"/>
                         </constraints>
                     </imageView>
                     <imageView hidden="YES" userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="arrows" translatesAutoresizingMaskIntoConstraints="NO" id="Lt5-4s-Kwx">
-                        <rect key="frame" x="176" y="47" width="10" height="18"/>
+                        <rect key="frame" x="184" y="47" width="10" height="18"/>
                         <constraints>
                             <constraint firstAttribute="width" constant="10" id="JFO-Cp-J1E"/>
                             <constraint firstAttribute="height" constant="18" id="cDZ-Vh-KU8"/>
                         </constraints>
                     </imageView>
+                    <label hidden="YES" opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="登录" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="IWA-yT-KfU">
+                        <rect key="frame" x="84" y="24.5" width="35" height="30"/>
+                        <constraints>
+                            <constraint firstAttribute="height" constant="30" id="sdC-J5-zgy"/>
+                        </constraints>
+                        <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                        <nil key="textColor"/>
+                        <nil key="highlightedColor"/>
+                    </label>
                 </subviews>
                 <constraints>
                     <constraint firstItem="Lt5-4s-Kwx" firstAttribute="leading" secondItem="cpc-Qw-hH1" secondAttribute="trailing" constant="8" id="1Vz-gl-plS"/>
                     <constraint firstItem="Lt5-4s-Kwx" firstAttribute="centerY" secondItem="cpc-Qw-hH1" secondAttribute="centerY" id="3FC-JO-qbr"/>
                     <constraint firstItem="4EI-uQ-Kdu" firstAttribute="leading" secondItem="H2p-sc-9uM" secondAttribute="leading" constant="8" id="5p3-zT-2Z0"/>
-                    <constraint firstItem="cpc-Qw-hH1" firstAttribute="leading" secondItem="4EI-uQ-Kdu" secondAttribute="trailing" constant="8" id="7DL-Tw-R7T"/>
+                    <constraint firstItem="cpc-Qw-hH1" firstAttribute="leading" secondItem="4EI-uQ-Kdu" secondAttribute="trailing" constant="16" id="7DL-Tw-R7T"/>
                     <constraint firstItem="vHE-Dm-wg9" firstAttribute="top" secondItem="H2p-sc-9uM" secondAttribute="top" constant="16" id="8Wy-9t-TTj"/>
                     <constraint firstItem="nuc-l9-QZX" firstAttribute="centerY" secondItem="gbz-tC-hl3" secondAttribute="centerY" id="91F-h2-1Pj"/>
                     <constraint firstItem="kXB-f4-Q3E" firstAttribute="centerY" secondItem="Caf-U9-tpv" secondAttribute="centerY" id="C9S-dn-H2N"/>
                     <constraint firstAttribute="bottom" secondItem="cpc-Qw-hH1" secondAttribute="bottom" constant="8" id="Cnd-eB-UhK"/>
+                    <constraint firstItem="IWA-yT-KfU" firstAttribute="leading" secondItem="4EI-uQ-Kdu" secondAttribute="trailing" constant="16" id="LCl-Cy-HB6"/>
                     <constraint firstItem="gbz-tC-hl3" firstAttribute="top" secondItem="H2p-sc-9uM" secondAttribute="top" constant="8" id="ZyL-c0-5Sf"/>
+                    <constraint firstItem="IWA-yT-KfU" firstAttribute="centerY" secondItem="H2p-sc-9uM" secondAttribute="centerY" id="f22-Ts-GOA"/>
                     <constraint firstAttribute="bottom" secondItem="Caf-U9-tpv" secondAttribute="bottom" constant="8" id="g0m-3Q-JDC"/>
-                    <constraint firstItem="gbz-tC-hl3" firstAttribute="leading" secondItem="4EI-uQ-Kdu" secondAttribute="trailing" constant="8" id="gC1-wO-Yrj"/>
+                    <constraint firstItem="gbz-tC-hl3" firstAttribute="leading" secondItem="4EI-uQ-Kdu" secondAttribute="trailing" constant="16" id="gC1-wO-Yrj"/>
                     <constraint firstItem="4EI-uQ-Kdu" firstAttribute="centerY" secondItem="H2p-sc-9uM" secondAttribute="centerY" id="iYg-Gu-AQq"/>
                     <constraint firstAttribute="trailing" secondItem="vHE-Dm-wg9" secondAttribute="trailing" constant="16" id="kz5-5j-VNa"/>
                     <constraint firstItem="nuc-l9-QZX" firstAttribute="leading" secondItem="gbz-tC-hl3" secondAttribute="trailing" constant="8" id="mss-Gs-WKo"/>
-                    <constraint firstItem="Caf-U9-tpv" firstAttribute="leading" secondItem="4EI-uQ-Kdu" secondAttribute="trailing" constant="8" id="nY4-2K-fDS"/>
+                    <constraint firstItem="Caf-U9-tpv" firstAttribute="leading" secondItem="4EI-uQ-Kdu" secondAttribute="trailing" constant="16" id="nY4-2K-fDS"/>
                     <constraint firstItem="kXB-f4-Q3E" firstAttribute="leading" secondItem="Caf-U9-tpv" secondAttribute="trailing" constant="8" id="oEj-1l-Y8U"/>
                 </constraints>
             </tableViewCellContentView>
@@ -111,10 +122,11 @@
                 <outlet property="applyBtn" destination="cpc-Qw-hH1" id="xcF-vo-rms"/>
                 <outlet property="headIMG" destination="4EI-uQ-Kdu" id="Lgb-Xl-WHU"/>
                 <outlet property="jifenL" destination="vHE-Dm-wg9" id="L7V-Ra-thx"/>
+                <outlet property="loginL" destination="IWA-yT-KfU" id="5nk-BD-o8M"/>
                 <outlet property="shopLevelIM" destination="kXB-f4-Q3E" id="4D7-e0-XvH"/>
                 <outlet property="shopNameBtn" destination="Caf-U9-tpv" id="WEF-q5-8wy"/>
             </connections>
-            <point key="canvasLocation" x="-171" y="18"/>
+            <point key="canvasLocation" x="-342" y="-127"/>
         </tableViewCell>
     </objects>
     <resources>
